Fix layout so it makes sense.
I gave too much width to a container and it caused some headache

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 }
 
 body {
-  background-color: var(--cyan-blue);
+  background-color: var(--white);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -29,60 +29,17 @@ main {
   flex-direction: row;
   padding-top: 10px;
   overflow-x: hidden;
-  gap: 10px;
+  gap: 4px;
+  border: 1px solid var(--neon-yellow);
 }
 
 .window {
-  width: 210%;
+  width: 100%;
   display: flex;
-  gap: 10px;
 }
 
 .game {
   width: 100%;
-}
-
-.versus-dialog {
-  min-height: 100%;
-  min-width: 100%;
-  background-color: transparent;
-  position: relative;
-  overflow-x: hidden;
-  
-  /* MODAL TOGGLING */
-  & input[type="checkbox"] {
-    position: absolute;
-    left: 46%;
-    top: 12px;
-    z-index: 3;
-  }
-  input[type="checkbox"]:checked ~ div {
-    --off-screen-translation: -100%;
-  }
-
-  & .vs-human-and-ai {
-    height: 50%;
-    width: 98%;
-    margin-top: 40px;
-    overflow-x: hidden;
-    display: flex;
-
-    & .vs-human {
-      min-width: 100%;
-      min-height: 100%;
-      background-color: hotpink;
-      transition: transform 0.3s ease;
-      transform: translateX(var(--off-screen-translation));
-    }
-
-    & .vs-ai {
-      min-width: 100%;
-      min-height: 100%;
-      background-color: rgb(105, 255, 130);
-      transition: transform 0.3s ease;
-      transform: translateX(var(--off-screen-translation));
-    }
-  }
 }
 
 .score-board {
@@ -168,6 +125,7 @@ main {
   & .start {
     width: 100%;
     margin-top: 12px;
+    margin-bottom: 12px;
     height: 70px;
     background-color: var(--malachite-green);
     border: var(--border);
@@ -176,5 +134,56 @@ main {
     font-weight: 800;
     font-size: 1.8rem;
     cursor: pointer;
+  }
+}
+
+.versus-dialog {
+  min-height: 100%;
+  min-width: 100%;
+  background-color: transparent;
+  position: relative;
+  overflow-x: hidden;
+  margin: 0.6rem;
+
+  /* MODAL TOGGLING */
+  & input[type="checkbox"] {
+    position: absolute;
+    left: 46%;
+    top: 12px;
+    z-index: 3;
+  }
+  input[type="checkbox"]:checked ~ div {
+    --off-screen-translation: -100%;
+  }
+
+  & .vs-human-and-ai {
+    height: 50%;
+    width: 100%;
+    margin-top: 40px;
+    overflow-x: hidden;
+    display: flex;
+
+    & .vs-human {
+      min-width: 100%;
+      min-height: 100%;
+      transition: transform 0.3s ease;
+      transform: translateX(var(--off-screen-translation));
+      display: flex;
+      flex-direction: column;
+      justify-content: start;
+      align-items: center;
+      background-color: var(--cyan-blue);
+      & form {
+        width: 300px;
+      }
+    }
+
+    & .vs-ai {
+      min-width: 100%;
+      min-height: 100%;
+      background-color: rgb(105, 255, 130);
+      transition: transform 0.3s ease;
+      transform: translateX(var(--off-screen-translation));
+    }
   }
 }
